...
                android:layout_weight="1"
                android:text="@string/ingredients"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ingredient_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/no_ingredient_view"
...
                android:layout_weight="1"
                android:text="@string/steps"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/step_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/no_step_view"
...
