...

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/step_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="25sp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>
            <TextView
                android:id="@+id/step_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:text="Very long description of a step in a recipe. Very long description of a step in a recipe. Very long description of a step in a recipe."/>

...
