...
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/recipes_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:adjustViewBounds="true"
        android:columnWidth="180dp"
        android:gravity="center"
...
